fix step 2 checkboxes and labels positions

--- a/resources/modules/global/css/global.css
+++ b/resources/modules/global/css/global.css
@@ -2597,6 +2597,9 @@ tbody td{
     font-size: 14px;
     color: #0B1D3D;
 }
+.step-2-checkbox-option input[type="checkbox"] {
+    margin: 3px 0 0 0!important;
+}
 .step-2-checkbox-option span {
     margin-left: 12px;
 }
