--- a/resources/modules/global/css/global.css
+++ b/resources/modules/global/css/global.css
@@ -2598,8 +2598,7 @@ tbody td{
     color: #0B1D3D;
 }
 .step-2-checkbox-option input[type="checkbox"] {
-    -webkit-margin: 3px 0 0 0 !important;
-    margin: 0 !important;
+    margin: 3px 0 0 0 !important;
 }
 .step-2-checkbox-option span {
     margin-left: 12px;
@@ -2627,6 +2626,28 @@ tbody td{
 #open-steps-btn:not(:disabled):not(.disabled).active:focus,
 #open-steps-btn:not(:disabled):not(.disabled):active:focus {
     box-shadow: none;
+}
+
+#new-register-step-3-container input[type="text"]:hover,
+#new-register-step-3-container input[type="text"]:focus {
+    outline: none!important;
+    border: 1px solid #e4eaec;
+}
+
+.input-valid {
+    border: 1px solid #59BF75;
+}
+.input-valid:hover,
+.input-valid:focus {
+    border: 1px solid #59BF75!important;
+}
+
+.input-invalid {
+    border: 1px solid #E81414;
+}
+.input-invalid:hover,
+.input-invalid:focus {
+    border: 1px solid #E81414!important;
 }
 
 #new-register-range {
