--- a/resources/modules/global/css/loading.css
+++ b/resources/modules/global/css/loading.css
@@ -230,7 +230,7 @@
 }
 
 .sirius-loading {
-    background-color: rgba(255, 255, 255, 1);
+    background-color: #f4f4f4;/*rgba(255, 255, 255, 1);*/
     position: fixed;
     width: 100%;
     height: 100%;
