--- a/resources/modules/global/css/global.css
+++ b/resources/modules/global/css/global.css
@@ -2515,6 +2515,10 @@ tbody td{
     transition: all 0.5s ease 0s;
 }
 
+.new-register-transition-slower {
+    transition-delay: 1s;
+}
+
 .new-register-step-btn-container {
     display: flex;
     justify-content: space-between;
