--- a/Modules/Projects/Resources/assets/css/style.css
+++ b/Modules/Projects/Resources/assets/css/style.css
@@ -345,6 +345,8 @@
 }
 .sirius-select-text{
     height: 43.14px;
+    padding: 8px 32px 8px 16px !important;
+    background-position: 97% center !important;
 }
 
 .percent-border{
