--- a/Modules/Reports/Resources/assets/css/reports.css
+++ b/Modules/Reports/Resources/assets/css/reports.css
@@ -2329,3 +2329,9 @@ h4.number{
     display: flex;
     align-items: center;
 }
+
+
+.table-coupons.table thead > tr > td:first-child { 
+    padding-left: 18px !important; 
+    padding-right: 18px !important; 
+}
