fixed general issues

--- a/resources/modules/global/css/global.css
+++ b/resources/modules/global/css/global.css
@@ -2865,10 +2865,10 @@ tbody td{
     min-height: 360px;
     background-color: #1BE4A8;
 
-    top: 20px;
+    top: 0px;
     right: 0px;
     margin-left: auto;
-    margin-right: 30px;
+    margin-right: 105px;
 
     background: #fff;
     box-shadow: 0px 0px 40px rgba(21, 3, 76, 0.15);
@@ -2966,8 +2966,6 @@ tbody td{
     font-size: 12px;
     line-height: 124%;
     color: #81859B;
-
-    text-align: justify;
 };
 
 
@@ -3084,6 +3082,7 @@ tbody td{
 
     .bonus-numbers {
         flex-direction: column;
+        gap: 8px;
     }
     
     .bonus-balance-background {
@@ -3099,7 +3098,7 @@ tbody td{
     }
 
     .bonus-infos {
-        justify-content: space-between;
+        justify-content: space-around;
     }
     
 }
