Removed fields sales from coupon screen.

--- a/Modules/Reports/Resources/assets/css/reports.css
+++ b/Modules/Reports/Resources/assets/css/reports.css
@@ -2407,4 +2407,4 @@ h4.number{
     transform: translate(0, -30%);
 }
 
-.margin-store { margin: 0 1.0715rem; }
+.margin-store { margin-right: 1.0715rem !important; }
