adjusted sirius select container size

--- a/resources/modules/global/css/global.css
+++ b/resources/modules/global/css/global.css
@@ -1926,7 +1926,7 @@ tbody td{
 /* sirius select */
 .sirius-select-container {
     position: relative;
-    width: 240px;
+    width: 100%;
 }
 
 .sirius-select-container .sirius-select-text {
